--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">MindvalleyChannels</string>
+    <string name="app_name">MindValley</string>
     <string name="label_channels">Channels</string>
 </resources>
